@@ -10,6 +10,7 @@ mail_location = maildir:%h
 mail_privileged_group = mail
 
 namespace private {
+	separator = .
 	inbox = yes
 	prefix = INBOX.
 }
